pytest, modular functions